[package]
name = "rage"
description = "[BETA] A simple, secure, and modern encryption tool."
version = "0.5.1"
authors = ["Jack Grigg <thestr4d@gmail.com>"]
repository = "https://github.com/str4d/rage"
readme = "../README.md"
keywords = ["age", "cli", "encryption"]
categories = ["command-line-utilities", "cryptography"]
license = "MIT OR Apache-2.0"
edition = "2018"

[package.metadata.deb]
name = "rage"
extended-description = """\
age is a simple, modern, and secure encryption format with small explicit keys, \
no config options, and UNIX-style composability. rage is a Rust implementation \
of the age specification."""
section = "utils"

[badges]
maintenance = { status = "experimental" }

[dependencies]
# rage and rage-keygen dependencies
age = { version = "0.5.0", path = "../age", features = ["armor", "cli-common", "plugin"] }
chrono = "0.4"
console = "0.14"
env_logger = "0.8"
i18n-embed = { version = "0.10.2", features = ["desktop-requester", "fluent-system"] }
i18n-embed-fl = "0.3"
lazy_static = "1"
log = "0.4"
pinentry = "0.3"
rust-embed = "5"
secrecy = "0.7"

[dev-dependencies]
clap = "3.0.0-beta.1"
clap_generate = "3.0.0-beta.1"
flate2 = "1"
man = "0.3"

[features]
default = ["ssh"]
ssh = ["age/ssh"]
unstable = ["age/unstable"]

[lib]
crate-type = ["staticlib"]
name = "rage"
bench = false
